2006-05-19  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/gdmconfig.[ch], daemon/slave.c,
	  daemon/verify-pam.c: Fix per-display configuration so it
	  also works for greeter/SystemMenu and greeter/ChooserButton
	  keys.  Add new gdmconfig.c interfaces for getting keys in
	  a per-display fashion so they are easier to use.

2006-05-18  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: Do not cause make install to fail if chown
	  fails.

2006-05-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Check if authdir is the fallback dir.  If not,
	  and GDM cannot access the user's $HOME directory, then try and
	  fallback directory.  Fixes bug #342116.  Patch provided
	  by Arjan Timmerman <arjan@soulfly.nl>.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

        * configure.ac: Fix configure so it builds the path to use for
          gdm-ssh-session desktop file properly if --libexecdir isn't
          passed to configure.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: No longer clean config/ssh.desktop.in file.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* utils/Makefile.am: Add gdm-ssh-session to EXTRA_DIST.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsession.c: Fix bug that was causing the
          ShowGnomeFailsafeSession and ShowGnomeXtermSession configuration
          values not to work right.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter_geometry.c: Fix layout of buttons.
          Patch provided by Erwann Chenede <erwann.chenede@sun.com>.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.6: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	Backporting some useful features from 2.15 to 2.14.   Per-display
	configuration and new gdmgreeter theming options (real GTK+ buttons,